--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-
+![image](https://raw.githubusercontent.com/wangyan186/Guitar/master/images/add.png)</br>
+![image](https://raw.githubusercontent.com/wangyan186/Guitar/master/images/add.png)</br>
+![image](https://raw.githubusercontent.com/wangyan186/Guitar/master/images/add.png)</br>
