--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-![image](https://raw.githubusercontent.com/wangyan186/Guitar/master/images/add.png)</br>
-![image](https://raw.githubusercontent.com/wangyan186/Guitar/master/images/add.png)</br>
-![image](https://raw.githubusercontent.com/wangyan186/Guitar/master/images/add.png)</br>
+![image](https://raw.githubusercontent.com/wangyan186/WYSRS/master/image/1.PNG)</br>
+![image](https://raw.githubusercontent.com/wangyan186/WYSRS/master/image/2.PNG)</br>
+![image](https://raw.githubusercontent.com/wangyan186/WYSRS/master/image/3.PNG)</br>
